--- a/project.json
+++ b/project.json
@@ -1,1 +1,1 @@
-{"build_update": false, "packages": ["linux", "win"], "add_from": true, "force_recompile": false, "android_build": "Release", "renamed_all": true, "renamed_steam": true, "tutorial": false}
+{"build_update": false, "packages": ["win"], "add_from": true, "force_recompile": false, "android_build": "Release", "renamed_all": true, "renamed_steam": true, "tutorial": false}
