--- a/game/.vscode/settings.json
+++ b/game/.vscode/settings.json
@@ -117,6 +117,12 @@
                 "settings": {
                     "foreground": "#000000"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#555",
+                "settings": {
+                    "foreground": "#555"
+                }
             }
         ]
     }
