--- a/game/.vscode/settings.json
+++ b/game/.vscode/settings.json
@@ -113,15 +113,27 @@
                 }
             },
             {
+                "scope": "renpy.meta.color.#555",
+                "settings": {
+                    "foreground": "#555"
+                }
+            },
+            {
                 "scope": "renpy.meta.color.#000000",
                 "settings": {
                     "foreground": "#000000"
                 }
             },
             {
-                "scope": "renpy.meta.color.#555",
+                "scope": "renpy.meta.color.#050505",
                 "settings": {
-                    "foreground": "#555"
+                    "foreground": "#050505"
+                }
+            },
+            {
+                "scope": "renpy.meta.color.#000",
+                "settings": {
+                    "foreground": "#000"
                 }
             }
         ]
