--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -141,6 +141,12 @@
                 "settings": {
                     "foreground": "#555"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#000",
+                "settings": {
+                    "foreground": "#000"
+                }
             }
         ]
     }
