--- a/project.json
+++ b/project.json
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-{"build_update": false, "packages": ["win"], "add_from": false, "force_recompile": false, "android_build": "Release", "renamed_all": true, "renamed_steam": true, "tutorial": false}
-=======
-{"build_update": false, "packages": ["pc"], "add_from": false, "force_recompile": false, "android_build": "Release", "renamed_all": true, "renamed_steam": true, "tutorial": false}
->>>>>>> 068ec1ae3e7e0dae5091d8554da0460e5406c527
+{"build_update": false, "packages": ["win"], "add_from": true, "force_recompile": true, "android_build": "Release", "tutorial": false, "renamed_all": true, "renamed_steam": true}
