Embranchement tablette activé

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,12 @@
                 }
             },
             {
+                "scope": "renpy.meta.color.#000",
+                "settings": {
+                    "foreground": "#000"
+                }
+            },
+            {
                 "scope": "renpy.meta.color.#000000",
                 "settings": {
                     "foreground": "#000000"
@@ -143,9 +149,9 @@
                 }
             },
             {
-                "scope": "renpy.meta.color.#000",
+                "scope": "renpy.meta.color.#00b6ed",
                 "settings": {
-                    "foreground": "#000"
+                    "foreground": "#00b6ed"
                 }
             }
         ]
